--- a/package.json
+++ b/package.json
@@ -39,6 +39,11 @@
     "keywords": [
         "Daemez",
         "Ext",
+        "ext js",
+        "ext-js",
+        "ext",
+        "extjs",
+        "ext-locale",
         "i18next",
         "internationalization",
         "i18n",
@@ -52,14 +57,14 @@
     },
     "homepage": "https://github.com/daemez/ext-i18next#readme",
     "dependencies": {
-        "i18next": "^20.2.2",
-        "i18next-browser-languagedetector": "^6.1.0",
-        "i18next-chained-backend": "^2.1.0",
-        "i18next-http-backend": "^1.2.2",
-        "i18next-localstorage-backend": "^3.1.2"
+        "i18next": "^21.5.2",
+        "i18next-browser-languagedetector": "^6.1.2",
+        "i18next-chained-backend": "^3.0.2",
+        "i18next-http-backend": "^1.3.1",
+        "i18next-localstorage-backend": "^3.1.3"
     },
     "devDependencies": {
-        "eslint": "^7.26.0"
+        "eslint": "^8.3.0"
     },
     "scripts": {
         "lint": "eslint ."
