fix: ESM/CJS interop and locale parsing issues
- Add interop() helper for ESM/CJS module compatibility
- Restore global exports for i18next (required by ExtJS components)
- Fix firstDayOfWeek parseInt (was string, caused day order issues)
- Fix Spanish typos: "Si" → "Sí", "(0)" → "{0}"
- Update dependencies to use >= for flexibility
- Bump version to 0.4.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@daemez/ext-i18next",
-    "version": "0.3.1",
+    "version": "0.4.0",
     "description": "i18next for Ext JS",
     "sencha": {
         "name": "i18next",
@@ -11,7 +11,7 @@
         "creator": "Daemez Solutions",
         "summary": "Ext JS i18next",
         "detailedDescription": "i18next for Ext JS locale for localization to a local language",
-        "version": "0.3.1",
+        "version": "0.4.0",
         "compatVersion": "0.3.1",
         "format": "1",
         "output": "${package.dir}/extjs/build",
@@ -57,14 +57,14 @@
     },
     "homepage": "https://github.com/daemez/ext-i18next#readme",
     "dependencies": {
-        "i18next": "^21.6.16",
-        "i18next-browser-languagedetector": "^6.1.4",
-        "i18next-chained-backend": "^3.0.2",
-        "i18next-http-backend": "^1.4.0",
-        "i18next-localstorage-backend": "^3.1.3"
+        "i18next": ">=21.0.0",
+        "i18next-browser-languagedetector": ">=6.0.0",
+        "i18next-chained-backend": ">=3.0.0",
+        "i18next-http-backend": ">=1.0.0",
+        "i18next-localstorage-backend": ">=3.0.0"
     },
     "devDependencies": {
-        "eslint": "^8.14.0"
+        "eslint": "^9.0.0"
     },
     "scripts": {
         "lint": "eslint ."
